<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <namit.retail_app.core.presentation.widget.SimpleToolbar
        android:id="@+id/notificationSimpleToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleContent="@string/my_address" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/addressOptionContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/addNewAddressButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationSimpleToolbar"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/favoriteTitleTextView"
                style="@style/L1.Trout40"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/catskillWhite"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/favourites"
                android:textAllCaps="true"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favoriteAddressRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favoriteTitleTextView"
                android:visibility="visible"
                tools:itemCount="2"
                tools:listitem="@layout/item_my_other_address" />

            <TextView
                android:id="@+id/otherTitleTextView"
                style="@style/L1.Trout40"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/catskillWhite"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/others"
                android:textAllCaps="true"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favoriteAddressRecyclerView"
                tools:ignore="RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/otherAddressRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/otherTitleTextView"
                android:visibility="visible"
                tools:itemCount="1"
                tools:listitem="@layout/item_my_other_address" />

            <TextView
                android:id="@+id/noAddressTextView"
                style="@style/H3.Trout60"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/no_has_address"
                android:visibility="gone"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/addNowTextView"
                style="@style/H3.DodgerBlue60"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_now"
                android:visibility="gone"
                android:gravity="center_horizontal"
                android:textStyle=""
                app:layout_constraintTop_toBottomOf="@id/noAddressTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addNewAddressButton"
        style="@style/MaterialTextButton.H1.WhiteDodgerBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:padding="17dp"
        android:text="@string/add_new_address"
        android:textAllCaps="true"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressOptionContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>