<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:background="@android:color/white"    android:layout_width="match_parent"    android:layout_height="match_parent">    <namit.retail_app.core.presentation.widget.SimpleToolbar        android:id="@+id/toolbar"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:titleContent="@string/selected_location" />    <fragment        android:id="@+id/searchLocationMap"        android:name="com.google.android.gms.maps.SupportMapFragment"        android:layout_width="match_parent"        android:layout_height="0dp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/toolbar" />    <FrameLayout        android:layout_width="0dp"        android:layout_height="240dp"        android:background="@drawable/bg_gradient_set_location_header"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toBottomOf="@id/toolbar"/>    <View        android:id="@+id/centerPointView"        android:layout_width="wrap_content"        android:layout_height="1dp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/toolbar" />    <ImageView        android:id="@+id/pinImageView"        android:layout_width="25dp"        android:layout_height="40dp"        android:src="@drawable/ic_current_location"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintBottom_toTopOf="@id/centerPointView"        tools:ignore="ContentDescription" />    <LinearLayout        android:id="@+id/searchLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="horizontal"        android:layout_marginStart="19dp"        android:layout_marginTop="19dp"        android:layout_marginEnd="19dp"        android:paddingTop="16dp"        android:paddingBottom="16dp"        android:gravity="center_vertical"        android:background="@drawable/bg_shape_white_15_radius"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/toolbar">        <ImageView            android:layout_width="18dp"            android:layout_height="18dp"            android:layout_marginStart="14dp"            android:src="@drawable/ic_search_blue"            tools:ignore="ContentDescription" />        <EditText            android:id="@+id/searchLocationEditText"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="13dp"            android:hint="@string/current_location"            android:background="@android:color/white"            android:ellipsize="end"            android:maxLines="1"            style="@style/H4.Trout"/>    </LinearLayout>    <androidx.recyclerview.widget.RecyclerView        android:id="@+id/storageAddressRecyclerView"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="13dp"        android:orientation="horizontal"        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/searchLayout"        tools:listitem="@layout/item_storage_address"        tools:itemCount="25" />    <androidx.recyclerview.widget.RecyclerView        android:id="@+id/searchResultRecyclerView"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="5dp"        android:layout_marginStart="19dp"        android:layout_marginEnd="19dp"        android:visibility="invisible"        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/searchLayout"        tools:listitem="@layout/item_address_search"        tools:itemCount="3"/>    <com.google.android.material.button.MaterialButton        android:id="@+id/setLocationButton"        style="@style/MaterialTextButton.H1.WhiteDodgerBlue"        android:layout_width="0dp"        android:layout_height="52dp"        android:layout_marginStart="20dp"        android:layout_marginTop="10dp"        android:layout_marginEnd="20dp"        android:layout_marginBottom="40dp"        android:paddingTop="15dp"        android:paddingBottom="15dp"        android:text="@string/set_location"        android:textAllCaps="true"        android:enabled="false"        app:cornerRadius="15dp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent" />    </androidx.constraintlayout.widget.ConstraintLayout>